--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "i18next": "^20.6.1",
     "postcss": "^8.5.3",
     "postcss-safe-parser": "^7.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-i18next": "^11.15.3",
     "react-scripts": "4.0.1",
     "react-service-worker": "^0.1.1",
     "serve": "^11.3.2",
